# pyprotector

./: .buildinfo  .pre-commit-config.yaml  .pytemplator.yml  AUTHORS.rst  CONTRIBUTING.rst  LICENSE  README.md  README.rst  authors.html  contributing.html  genindex.html  history.html  index.html  installation.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  readme.html  search.html  searchindex.js  usage.html
.github/workflows/: gh-pages.yml  python-package.yml  python-publish.yml
_sources/: installation.rst.txt  modules.rst.txt
docs/: conf.py  index.rst  usage.rst
src/pyprotector/: __init__.py  fibonacci.py
tests/: test_fibonacci.py
