[tool.poetry]
name = "pyprotector"
version = "0.1.0"
description = "Python package designed to perform sanity-checks and gate-keeping on the packages produced internally by an organisation. Handles internal structure, naming conventions and namespaces, etc"
authors = ["Arnaud Blois <hi@arnaudblois.com>"]
license = "MIT"
include = ["README.rst", "CHANGELOG.rst", "LICENSE"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
Sphinx = "^4.4.0"
pytest = "^7.0.0"
pytest-cov = "^3.0.0"
flake8 = "^4.0.1"
pylint-runner = "^0.6.0"
sphinx-rtd-theme = "^1.0.0"
python-lsp-server = {extras = ["all"], version = "^1.2.4"}
black = "^22.1.0"
pylint = "^2.12.2"
pre-commit = "^2.17.0"
rstcheck = "^3.3.1"
gitlint = "^0.17.0"
pytemplator = "^0.1.0-alpha.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.ini_options]
disable = ["C0330", "C0326", "R0801"]
max-line-length = 88
ignore = "docs"

[tool.pylint.master]
ignore = "docs"

[tool.isort]
profile = "black"
multi_line_output = 3
